--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,24 @@
               [latitude]="point.location.coordinates[1]"
               [longitude]="point.location.coordinates[0]"
               [iconUrl]="iconGreen"
-              (click)="''"
+              (click)="onFacebookLocation(point)"
   >
   </agm-marker>
   <agm-marker *ngFor="let location of locationsArr"
               [latitude]="location.lat"
               [longitude]="location.lng"
-              [iconUrl]="iconRed"
-  >
+              [iconUrl]="iconRed">
+    <agm-info-window [disableAutoPan]="false" #infoWindow>
+
+      <div>
+        hola
+      </div>
+      <div>
+        <a (click)="onClickInfoView({id:location.id})" class="btn btn-attention pull-right">perro <i class="fa fa-angle-double-right"></i></a>
+      </div>
+
+    </agm-info-window>
+
   </agm-marker>
 </agm-map>
 
